tests/kulezi_tests/good/core_012_short.lat
/* Test arithmetic and comparisons. */

int main() {
    int x = 56;
    int y = -23;
    printBool(x - y > x + y);
    printBool(x / y <= x * y);
    return 0;
}

void printBool(boolean b) {
    if (b) {
        printString("true");
        return;
    } else {
        printString("false");
        return;
    }
}