tests/kulezi_tests/bad/string_has_no_fields.lat
int main() {
    string x;
    int y;
    return x.y;
}